hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_varray.php.exp
File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 34-34:
An arrow ('=>') is expected here. (Parsing[1002])
File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 34-34:
Unbound name: ] (a global constant) (Naming[2049])
